fixed modals not working after bumping hero ui versionining inadvertently.  Have to move fixed + bottom css classes to explicit modal.trigger class. Also have to wrap modal.container with modal.backdrop. Also have to add additional css vars to index.css to fix updated theming changes

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -4,21 +4,29 @@
 .theme-muted {
   --accent: oklch(0.4649 0.0821 235.87);
   --color-accent: oklch(0.4649 0.0821 235.87);
+  --color-accent-hover: oklch(0.4649 0.0821 235.87);
+  --color-accent-soft-foreground: oklch(0.4649 0.0821 235.87);
 }
 
 .theme-rosewood {
   --accent: oklch(0.5294 0.172 12.77);
   --color-accent: oklch(0.5294 0.172 12.77);
+  --color-accent-hover: oklch(0.5294 0.172 12.77);
+  --color-accent-soft-foreground: oklch(0.5294 0.172 12.77);
 }
 
 .theme-toffee {
   --accent: oklch(0.5549 0.0918 49.57);
   --color-accent: oklch(0.5549 0.0918 49.57);
+  --color-accent-hover: oklch(0.5549 0.0918 49.57);
+  --color-accent-soft-foreground: oklch(0.5549 0.0918 49.57);
 }
 
 .theme-tropical {
   --accent: oklch(0.6391 0.0648 185.11);
   --color-accent: oklch(0.6391 0.0648 185.11);
+  --color-accent-hover: oklch(0.6391 0.0648 185.11);
+  --color-accent-soft-foreground: oklch(0.6391 0.0648 185.11);
 }
 
 html {
